2008-09-03 Frank Naegler  <typo3@naegler.net>
	* coompleted the tx_community_model_Group
	* extend fe_groups table
	* added findFriends() to tx_community_model_UserGateway
	* added empty findByRoles() to tx_community_model_UserGateway

2008-09-02 Frank Naegler  <typo3@naegler.net>

	* added setUid() to tx_community_model_User, needed by community_messages

2008-09-01 Frank Naegler  <typo3@naegler.net>

	* completed getApplication() and getAllApplications() in tx_community_ApplicationManager
	* added getTypoScriptConfiguration to tx_community_controller_AbstractCommunityApplication

2008-08-31 Ingo Renner  <ingo@typo3.org>

	* added the privacy settings view to the privacy application
	* added a method to the LLL view helper so that it can resolve full paths of labels, starting with EXT:...
	* added a column to the ACL roles table to mark a role as publicly visible
	* added saving of ACLs through the privacy application GUI

2008-08-30 Ingo Renner  <ingo@typo3.org>

	* added dynamic Access Control System
	* added an access manager
	* added a table to store friend connection (user to user to role)
	* added two new fields and resource, to the ACL rule table
	* !!! changed the community application widget interface
	* !!! moved the getRequestedUser() method to the abstract community application
	* added a getRequestingUser() method to the abstract community application
	* fixed a small bug that caused a warning in the application manager when saving the BE plugin flexform without having selected an application
	* added skeleton for the user profile basic information widget
	* added skeleton for the user profile contact information widget
	* added skeleton for the privacy management application
	* completed the user account model
	* added a user profile actions widget
	* added a "Add as Friend" profile action to the user profile actions widget

2008-08-29 Ingo Renner  <ingo@typo3.org>

	* added initial structure for the ACL tables
