@@ -45,6 +45,11 @@ abstract class tx_community_controller_AbstractCommunityApplication extends tsli
 	 */
 	protected $userGateway;
 
+	/**
+	 * @var tx_community_model_GroupGateway
+	 */
+	protected $groupGateway;
+	
 	// FIXME create an abstract community application widget that includes the properties, common implementations for the interfaces
 
 	// TODO add a way to have controller plugins like Zend Framework does
@@ -61,7 +66,8 @@ abstract class tx_community_controller_AbstractCommunityApplication extends tsli
 		$this->cObj = t3lib_div::makeInstance('tslib_cObj');
 
 		$this->userGateway = t3lib_div::makeInstance('tx_community_model_UserGateway');
-
+		$this->groupGateway = t3lib_div::makeInstance('tx_community_model_GroupGateway');
+		
 		parent::tslib_pibase();
 	}
 
@@ -80,6 +86,22 @@ abstract class tx_community_controller_AbstractCommunityApplication extends tsli
 	 */
 	public function getName() {
 		return $this->name;
+	}
+
+
+	/**
+	 * returns the group that shall be displayed
+	 *
+	 * @return tx_community_model_Group
+	 */
+	public function getRequestedGroup() {
+		$requestedGroup = $this->groupGateway->findCurrentGroup();
+
+		if (!($requestedGroup instanceof tx_community_model_Group)) {
+			// TODO throw a "user not found exception"
+		}
+
+		return $requestedGroup;
 	}
 
 	/**
